# chic-2017-smart-wellness

./: .drone.yml  .gitignore  CMakeLists.txt  README.md  beautify  ble_notes.md  ctags.py  generate_uuid.py  license_header.txt  newt  openocd_swd_test.cfg  project.yml  start_dev.sh  sun_sensor_driver_test.cpp  uncrustify.cfg  veml6075.c  veml6075.h
.ci/: lint.sh
apps/blinky/: README.md  pkg.yml
apps/blinky/src/: blinky.c  main.c
apps/sensor-test/: pkg.yml
apps/sensor-test/src/: main.c
apps/smart-wellness/: pkg.yml
apps/smart-wellness/src/: bleprph.h  gatt_svr.c  main.c  main.h
hw/bsp/breadboard/: bsp.yml  pkg.yml
hw/bsp/breadboard/src/: hal_bsp.c
hw/bsp/ilanga/: bsp.yml  ilanga.cfg  ilanga_debug.sh  ilanga_download.sh  pkg.yml  syscfg.yml
hw/bsp/ilanga/src/: hal_bsp.c  sbrk.c
libs/lis2-accelerometer/: pkg.yml
libs/lis2-accelerometer/include/lis2-accelerometer/: lis2-accelerometer.h
libs/lis2-accelerometer/src/: lis2-accelerometer.c
libs/veml6075-uv-sensor/: pkg.yml
libs/veml6075-uv-sensor/include/veml6075-uv-sensor/: veml6075-uv-sensor.h
libs/veml6075-uv-sensor/src/: veml6075-uv-sensor.c
targets/ble-nrf51/: pkg.yml  syscfg.yml  target.yml
targets/blinky-nrf51/: pkg.yml  target.yml
targets/blinky-stm32/: pkg.yml  syscfg.yml  target.yml
targets/boot-nrf51/: pkg.yml  target.yml
targets/boot-stm32/: pkg.yml  target.yml
targets/nrf52-ble/: pkg.yml  syscfg.yml  target.yml
targets/nrf52-blinky/: pkg.yml  target.yml
targets/nrf52-boot/: pkg.yml  target.yml
targets/nrf52-uv-sensor-test/: pkg.yml  target.yml
tests/: i2c_mocks.cpp  i2c_mocks.hpp  lis2_accelerometer.cpp  veml6075.cpp
(+3 files in other folders)
